--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,3 +4,10 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+security.oauth2.client.client-id=${CLIENT_ID}
+security.oauth2.client.client-secret=${CLIENTE_SECRET}
+
+jwt.secret=${JWT_SECRET}
+jwt.duration=${JWT_DURATION}
