--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,7 +7,7 @@ spring.h2.console.path=/h2-console
 
 
 security.oauth2.client.client-id=${CLIENT_ID}
-security.oauth2.client.client-secret=${CLIENTE_SECRET}
+security.oauth2.client.client-secret=${CLIENT_SECRET}
 
 jwt.secret=${JWT_SECRET}
 jwt.duration=${JWT_DURATION}
