--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,15 @@
+# scripts para criar tabelas no banco
+# spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+# spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+
+# spring.datasource.url=jdbc:postgresql://localhost:5432/senacbooks
+# spring.datasource.username=postgres
+# spring.datasource.password=password
+
+# spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
