--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,9 @@ spring.datasource.password=1234
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
+
+security.oauth2.client.client-id=${CLIENT_ID}
+security.oauth2.client.client-secret=${CLIENT_SECRET}
+
+jwt.secret=${JWT_SECRET}
+jwt.duration=${JWT_DURATION}
